# fuzzy-goggles

./: Cargo.toml  README.md  a.html
src/: app.rs  assets.rs  event.rs  handler.rs  lib.rs  main.rs  ui.rs
src/widgets/: logo.rs  mask.rs  mod.rs  page.rs
static/: test.html
