[package]
name = "yly-tui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ratatui = { version = "0.23.0", features = ["all-widgets"]}
crossterm = "*"
packer = "0.5"
uuid = {version = "1.4.1", features = [ "v4" ]}
[dependencies.html2text]
path = "../rust-html2text"
[dependencies.ratatui-image]
path = "../ratatui-image"