[package]
name = "yly-tui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ratatui = { version = "0.23.0", features = ["all-widgets"]}
crossterm = "*"
uuid = {version = "1.4.1", features = [ "v4" ]}
once_cell = "1.18.0"
image = "0.24.7"
rust-embed="8.0.0"
walkdir = "2.4.0"
[dependencies.html2text]
path = "../rust-html2text"
[dependencies.ratatui-image]
path = "../ratatui-image"